Fix pentagon icon spacing (hack)

--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@ ul.pent .cwrap {
 	width: 80px;
 	height: 80px;
 	display: inline-block;
+	margin-bottom: -20px;
 }
 
 #icon_student {
